 - many Lua additions
 - Lua pr-downloader API
 - removal of airbases & fuel
 - transport overhaul
 - 64bit windows builds

General:
 ! change default screenshot file type to jpg. to create png use /screenshot png
 ! pr-downloader dependency is now mandatory (statically linked with spring)
 ! demo files are now compressed with gzip
 - improve data locality even further with respect to 100.0
 - plug memory leaks and fix misc. crashes (some related to LoadingMT)

LoS:
 ! ModInfo: remove losMul & airLosMul -> always handle los ranges in elmos in the _whole_ engine
   WARNING: this also rescales the returned values in Lua UnitDefs!
 ! ModInfo: make `radarMipLevel` configurable
 ! change default airMipLevel 2->1 & radarMipLevel 3->2
 ! ModInfo: add new sensors.alwaysVisibleOverridesCloaked (default _off_! before was always on)
 ! modrules.lua: add new `separateJammers` tag (breaks backward compability!)
   default true (old behaviour is false)
   when enabled each allyTeam only jammes their own units
 ! get rid of los radius limit (you can now create units that cover the whole map and more)
 - speed ups in general
 - reduced lags introduced by LoS
 - multithread LoS updating
 - reduced memory usage
 ! fix various bugs related to unit/feature movement not registered
 ! update LoS on terrain changes
 ! correctly handle the height of the emitter (before radarEmitHeight was always from ground height & similar units on a spot shared their emitHeight)
 ! make LoS much smoother (now really gets called per-gameframe when the emitter moves)
 - better circle algo
 - add Spring.SetGlobalLos(int allyTeamID, bool globallos)

Sim:
 - start simulation at frame 0, not at 1
 - features now have a non-animated LocalModel and can use per-piece collision volumes
 - RockUnit and HitByWeapon script callins now take vectors in unit-space
 - fix acceleration rates and turn-speed limits for reversing units
 - fix units occasionally zipping across the map after being unloaded